[project]
name = "lpb-v"
version = "0.1.0"
description = "Log-Polar Bias for Vision Transformers — positional encoding experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy>=2.2,<2.3",
    "matplotlib>=3.10",
    "pillow>=11",
    "pillow-avif-plugin>=1.5",
]

[tool.uv]
# Resolve torch / torchvision from the PyTorch CUDA 12.4 wheel index
# (matches the previous conda env `rba_torch_26`: PyTorch 2.6.0+cu124).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
